# VoiceFlow-Intelligence-Platform

./: .env.example  .gitignore  .gitleaks.toml  .semgrepignore  AUTOMATE.md  CHECKPOINT.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  GCP_DEPLOYMENT.md  GCP_DEPLOYMENT_STATUS.md  LICENSE  QUICK_START.md  README.md  RUST_BUILD_ANALYSIS.md  docker-compose.inference.yml  docker-compose.yml  prometheus.yml
cursor-agents/: README.md  agent1-security-foundation.md  agent2-python-clean-arch.md  agent3-ml-validation.md  agent4-rust-engine.md  agent5-terraform-aws.md  agent6-cicd-pipeline.md  agent7-observability.md  agent8-tests-quality.md  handoff-agent1.md  handoff-agent2.md  handoff-agent3.md  handoff-agent4.md  handoff-agent5.md  handoff-agent6.md  handoff-agent7.md  handoff-agent8.md
docs/: ARCHITECTURE_FLOW.md  CAHIER_DES_CHARGES.md  CONCEPTION_TECHNIQUE.md  DEPLOYMENT_STRATEGY.md  EMBEDDING_BASED_DIARIZATION_GUIDE.md  NOTE_DE_CADRAGE.md  PROJECT_REFACTORING_SUMMARY.md
infra/: README.md
scripts/: segments_to_rttm.py  smoke_infer.py
voiceflow-inference/: .gitignore  Cargo.toml  Dockerfile
voiceflow-inference/src/: config.rs  error.rs  lib.rs  main.rs
voiceflow-inference/src/api/: handlers.rs  mod.rs
voiceflow-inference/src/inference/: mod.rs
voiceflow-inference/src/metrics/: mod.rs
voiceflow-inference/src/streaming/: clustering.rs  mod.rs  sliding_window.rs
voiceflow-inference/tests/: inference_tests.rs
voiceflow-ml/: .coveragerc  .env.example  .gitignore  CLEANUP_COMPLETE.md  Dockerfile  Dockerfile.export  Dockerfile.gpu  PROJECT_STATUS.md  (+18 more)
(+144 files in other folders)
