[package]
name = "voiceflow_inference"
version = "1.0.0"
edition = "2021"
authors = ["VoiceFlow Intelligence Team"]
description = "High-performance real-time speaker diarization inference engine"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# ONNX Runtime - CPU only for local testing (GPU for production)
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# Array processing
ndarray = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for calling Python service)
reqwest = { version = "0.11", features = ["json"] }

# Config
config = "0.13"

# WebSocket
tokio-tungstenite = "0.21"

[dev-dependencies]
# Testing
tokio-test = "0.4"
httpmock = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
